Fix authentication to work with Supernote's new CSRF protection
Supernote Cloud added CSRF protection and bot detection that broke the
existing login flow. This commit updates the authentication to work with
these changes.

Changes:
- Add CSRF token support via /api/csrf endpoint
- Add required headers: X-XSRF-TOKEN, Origin, Referer, Sec-Fetch-*, Sec-Ch-Ua*
- Update User-Agent and browser string to Chrome 134
- Fix countryCode type (string instead of int)
- Add login-browser command using Playwright for bot detection bypass
- Add playwright as optional dependency [browser]
- Add CLAUDE.md with architecture documentation

The standard `sncloud login` may fail with a verification code error due
to bot detection. Use `sncloud login-browser` to login via a visible
browser which bypasses this detection.

Install browser support with: pip install sncloud[browser]

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ dependencies = [
     "pydantic>=2.10.5",
 ]
 
+[project.optional-dependencies]
+browser = ["playwright>=1.40.0"]
+
 [project.scripts]
 sncloud = "sncloud.cli:cli"
 
